# lighthouse-firewall-auto-allow

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_client_ipv6_prefix.py
src/lighthouse_firewall_auto_allow/: __init__.py  agent_scripts.py  config.py  database.py  deps.py  main.py  models.py  reconcile.py  routes_api.py  routes_auth.py  routes_web.py  rules.py  schemas.py  security.py  templating.py  tencent.py
src/lighthouse_firewall_auto_allow/static/: app.css
src/lighthouse_firewall_auto_allow/static/scripts/: install-linux.sh  install-macos.sh  install-windows.ps1
src/lighthouse_firewall_auto_allow/templates/: base.html  client_detail.html  client_form.html  index.html  targets.html
tests/: test_agent_scripts.py  test_database_migrations.py  test_reconcile.py  test_rules.py  test_security.py  test_web_purge.py
