[project]
name = "lighthouse-firewall-auto-allow"
version = "0.1.2"
description = "Center-agent Tencent Cloud Lighthouse firewall auto allow service."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0",
    "authlib>=1.5.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.9.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.40",
    "tencentcloud-sdk-python-lighthouse>=3.0.1400",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lighthouse_firewall_auto_allow"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/lighthouse_firewall_auto_allow/agent_scripts.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
